syntax = "proto3";

option csharp_namespace = "SeeSharp.gRPC.Protos";
import "google/api/annotations.proto";

package blogposts;


service BlogPosts{
	// Create
    rpc CreateBlogPost(CreateBlogPostRequest) returns (CreateBlogPostResponse) {
        option (google.api.http) = {
            post: "/v1/blogposts",
            body: "*"
        };
    }

	// Read List
    rpc GetBlogPosts(GetBlogPostsRequest) returns (GetBlogPostsResponse) {
        option (google.api.http) = {
            get: "/v1/blogposts"
        };
    }

	// Read Single
    rpc GetBlogPostById(GetBlogPostRequest) returns (GetBlogPostReponse){
        option (google.api.http) = {
            get: "/v1/blogposts/{id}"
        };
    }

	// Update
    rpc UpdateBlogPost(UpdateBlogPostRequest) returns(empty) {
        option (google.api.http) = {
            put : "/v1/blogposts",
            body: "*"
        };
    }

	// Delete
    rpc DeleteBlogPost(DeleteBlogPostRequest) returns(empty){
        option (google.api.http) = {
            delete: "/v1/blogposts/{id}"
        };
    }
}

message CreateBlogPostRequest{
    string title = 1;

    string category = 2;

    string author = 3;

    string content = 4;
}

message CreateBlogPostResponse{
    string id = 1;
}

message GetBlogPostRequest{
    string id = 1;
}

message GetBlogPostReponse{
    string id = 1;

    string title = 2;

    string category = 3;

    string author = 4;

    string content = 5;

    string dateCreated = 6;
}

message GetBlogPostsRequest{}

message GetBlogPostsResponse{
    repeated GetBlogPostReponse blogPosts = 1;
}

message UpdateBlogPostRequest{
    string id = 1;

    string title = 2;

    string category = 3;

    string author = 4;

    string content = 5;
}


message DeleteBlogPostRequest{
    string id = 1;
}

message empty{

}